--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,15 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
+    "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.7",
+    "puppeteer": "^16.1.0",
     "sequelize": "^6.21.3"
   },
   "devDependencies": {
